# Backtester

./: CMakeLists.txt  README.md  TODO  build.sh
include/Backtest/: Backtest.h
include/Calculations/: Technicals.h
include/Data/: Bar.h  DataHandler.h  HistoricCSVDataHandler.h
include/Entities/: Candle.h  Timespan.h
include/Events/: Event.h  FillEvent.h  MarketEvent.h  OrderEvent.h  SignalEvent.h
include/Execution/: Execution.h  SimpleSimulatedExecutionHandler.h
include/Portfolio/: Portfolio.h
include/Storage/: InMemoryStorage.h  StorageProvider.h
include/Strategy/: BuyAndHoldStrategy.h  Strategy.h
include/Trade/: TradeProvider.h
include/Utility/: Utility.h
include/risk/: RiskManagement.h
src/: main.cc
src/Backtest/: Backtest.cc
src/Calculations/: Technicals.cc
src/Data/: HistoricCSVDataHandler.cc
src/Events/: FillEvent.cc  OrderEvent.cc
src/Execution/: SimpleSimulatedExecutionHandler.cc
src/Portfolio/: Portfolio.cc
src/Storage/: InMemoryStorage.cc
src/Strategy/: BuyAndHoldStrategy.cc
tests/unit/: test_inmemorystorage.cc
